# Courses-Creator

./: .env.example  .env.production  .gitignore  AGENTS.md  COMPLETE_IMPLEMENTATION_REPORT.md  COMPLETE_INCOMPLETE_WORK_SUMMARY.md  COMPLETE_PROJECT_STATUS_REPORT.md  COMPREHENSIVE_ANALYSIS_AND_IMPLEMENTATION_PLAN.md  COMPREHENSIVE_IMPLEMENTATION_PLAN.md  COMPREHENSIVE_IMPLEMENTATION_REPORT.md  DATABASE_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT.md  DETAILED_IMPLEMENTATION_GUIDE.md  DEVELOPMENT.md  DOCKER_IMPLEMENTATION_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT_AND_PLAN.md  Makefile  README.md  STEP_BY_STEP_IMPLEMENTATION_GUIDE.md  TESTING_FRAMEWORK_GUIDE.md  TEST_INFRASTRUCTURE_STATUS.md  WEBSITE_IMPLEMENTATION_REQUIREMENTS.md  demo-course.md  docker-compose.yml  package-lock.json  register_new_user.py  setup-dev.sh  setup_user.py  test-server.go  test_auth.py  test_course_endpoints.go  test_course_generation.py  test_db_check.py  test_db_integration.go  test_endpoints.go  test_llm_integration.go  test_simple_course.py  test_tokens.json
core-processor/: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  README_STORAGE.md  demo.sh  go.mod  go.sum  main.go  pyproject.toml  run.sh  test.md  test_course.md
core-processor/api/: auth_handlers.go  content_validation_test.go  course_api.go  handlers.go  job_handlers.go
core-processor/cmd/: commands.go
core-processor/config/: config.go
core-processor/database/: connection.go
core-processor/docs/: DEPLOYMENT.md  STORAGE.md
core-processor/filestorage/: local.go  (+4 more)
(+153 files in other folders)
