[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "course-creator-core"
version = "0.1.0"
description = "Core processing engine for video course creation"
authors = [{name = "Course Creator Team"}]
dependencies = [
    "mcp>=0.1.0",
    "transformers>=4.21.0",
    "torch>=2.0.0",
    "bark-tts>=0.1.0",
    "markdown>=3.4.0",
    "sqlalchemy>=2.0.0",
    "ffmpeg-python>=0.2.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.5",
    "uvicorn>=0.20.0",
    "fastapi>=0.100.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src --cov-report=html --cov-report=term-missing"